--- a/Web/Pages/CCGMember/AllPositions.cshtml
+++ b/Web/Pages/CCGMember/AllPositions.cshtml
@@ -11,7 +11,7 @@
 }
 <section role="contentinfo">
     <div class="col-md-12">
-        <h2>@Localizer["AllPositions"]</h2>
+        <h2><b>@Localizer["AllPositions"]</b></h2>
         <form>
             <p>
                 <input type="text" asp-for="filter" />
@@ -29,7 +29,7 @@
                             <div class="col-sm-3 mrgn-bttm-md">
                                 <figure>
                                     <img src="@Url.Content(imagefolder + jobgroup.NameEng +".jpg")" alt="" class="img-responsive thumbnail mrgn-bttm-sm" />
-                                    <figcaption class="text-center"><h6>@jobgroup.NameEng (@jobgroup.CodeEng)</h6></figcaption>
+                                    <figcaption class="text-center"><h6>@jobgroup.NameEng (@jobgroup.Code)</h6></figcaption>
                                 </figure>
                             </div>
                         </a>
@@ -46,7 +46,7 @@
                                 <div class="col-sm-3 mrgn-bttm-md">
                                     <figure>
                                         <img src="@Url.Content(imagefolder + jobgroup.NameEng +".jpg")" alt="" class="img-responsive thumbnail mrgn-bttm-sm" />
-                                        <figcaption class="text-center"><h6>@jobgroup.NameEng (@jobgroup.CodeEng)</h6></figcaption>
+                                        <figcaption class="text-center"><h6>@jobgroup.NameEng (@jobgroup.Code)</h6></figcaption>
                                     </figure>
                                 </div>
                             </a>
@@ -69,7 +69,7 @@
                             <div class="col-sm-3 mrgn-bttm-md">
                                 <figure>
                                     <img src="@Url.Content(imagefolder + jobgroup.NameEng +".jpg")" alt="" class="img-responsive thumbnail mrgn-bttm-sm" />
-                                    <figcaption class="text-center"><h6>@jobgroup.NameFre (@jobgroup.CodeFre)</h6></figcaption>
+                                    <figcaption class="text-center"><h6>@jobgroup.NameFre (@jobgroup.Code)</h6></figcaption>
                                 </figure>
                             </div>
                         </a>
@@ -86,7 +86,7 @@
                                 <div class="col-sm-3 mrgn-bttm-md">
                                     <figure>
                                         <img src="@Url.Content(imagefolder + jobgroup.NameEng +".jpg")" alt="" class="img-responsive thumbnail mrgn-bttm-sm" />
-                                        <figcaption class="text-center"><h6>@jobgroup.NameFre (@jobgroup.CodeFre)</h6></figcaption>
+                                        <figcaption class="text-center"><h6>@jobgroup.NameFre (@jobgroup.Code)</h6></figcaption>
                                     </figure>
                                 </div>
                             </a>
