--- a/Web/Pages/CCGMember/Compare/ObjectiveLevel.cshtml
+++ b/Web/Pages/CCGMember/Compare/ObjectiveLevel.cshtml
@@ -3,46 +3,51 @@
 @model Web.Pages.CCGMember.Compare.ObjectiveLevelModel
 @inject IHttpContextAccessor contextAccessor
 @inject IViewLocalizer Localizer
-@{      
+@{
     //var isEnglish = System.Threading.Thread.CurrentThread.CurrentCulture.TwoLetterISOLanguageName == "en";
     var id = Model.id;
+    var current = Model.current;
     var jobPositions = Model.JobGroupPositions;
-    var levels = new List<String>();
+    var levels = new List<string>();
+
     foreach (var jp in jobPositions)
     {
         levels.Add(jp.LevelValue);
     }
-    var levelsd = levels.Distinct(); }
+    var levelsd = levels.Distinct();
+}
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
-<h2>@Localizer["h2Text"]</h2>
+<h2><b>@Localizer["h2Text"]</b></h2>
 
 <figure><img src="~/img/CCGMember/Positions-full.jpg" alt="Photo of " class="img-responsive thumbnail mrgn-bttm-sm" /></figure>
-<br />
-
+<h3><b>@Model.JobGroup.NameEng (@Model.JobGroup.Code)</b></h3>
 <div class="dropdown">
-    <button class="btn btn-primary dropdown-toggle" id="menu1" type="button" data-toggle="dropdown">
-        Select Level
-        <span class="caret"></span>
-    </button>
-    <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
-        @foreach (var level in levelsd)
-        {
-            var data = new Dictionary<string, string>
-    {
-                {"current",  Model.current.ToString() },
-           { "id",  id.ToString()},
-           { "level",  level.ToString()}
-        };
-<li role="presentation">
-    <a role="menuitem" tabindex="-1"
-       asp-page="ObjectivePosition" asp-all-route-data="data">Level @level</a>
-</li>}
-    </ul>
+    <div class="col-sm-3">
+        <label><b>Level</b></label><br />
+        <button class="dropdown-toggle" width="100%" id="menu1" type="button" data-toggle="dropdown">
+            Select Level
+            <span class="caret"></span>
+        </button>
+        <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
+            @foreach (var level in levelsd)
+            {
+              var data = new Dictionary<string, string>
+                 {
+                       {"current",  current.ToString() },
+                       { "id",  id.ToString()},
+                       { "level",  level.ToString()}
+                  };
+        <li role="presentation">
+            <a role="menuitem" tabindex="-1"
+               asp-page="ObjectivePosition" asp-all-route-data="data">Level @level</a>
+        </li>
+    }
+        </ul>
+    </div>
 </div>
-
 <div class="row">
     <div class="col-lg-12 mrgn-bttm-md">
         <nav role="navigation" class="mrgn-bttm-lg">
