--- a/Web/Pages/CCGMember/Compare/SearchType.cshtml
+++ b/Web/Pages/CCGMember/Compare/SearchType.cshtml
@@ -2,7 +2,7 @@
 @inject IViewLocalizer Localizer
 
 
-<h3>@Localizer["Question1"]</h3>
+<h2><b>@Localizer["Question1"]</b></h2>
 <a asp-page="">
     <div class="col-sm-3 mrgn-bttm-md">
         <figure>
