--- a/Web/Pages/CCGMember/CurrentPosition.cshtml
+++ b/Web/Pages/CCGMember/CurrentPosition.cshtml
@@ -6,49 +6,78 @@
 @{
     var isEnglish = System.Threading.Thread.CurrentThread.CurrentCulture.TwoLetterISOLanguageName == "en";
     //var page = contextAccessor.HttpContext.Request.RouteValues;
+    var id = Model.id;
     var jobPositions = Model.JobGroupPositions;
+    var groupLevels = Model.JobGroupLevels;
+    var levels = new List<string>();
+
+    foreach (var jp in groupLevels)
+    {
+        levels.Add(jp.LevelValue);
+    }
+    var levelsd = levels.Distinct();
 }
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-<h2>@Localizer["Level"] @Model.level</h2>
-<h2>@Localizer["h2Text"]</h2>
 
-<!--figure><img src="~/img/CCGMember/Positions-full.jpg" alt="Photo of " class="img-responsive thumbnail mrgn-bttm-sm" </figure-->
-<br />
-
-
+<h2><b>@Localizer["h2Text"]</b></h2>
+<figure><img src="~/img/CCGMember/Positions-full.jpg" alt="Photo of " class="img-responsive thumbnail mrgn-bttm-sm" /> </figure>
+<h3><b>@Model.JobGroup.NameEng (@Model.JobGroup.Code)</b></h3>
 <div class="dropdown">
-    <button class="btn btn-primary dropdown-toggle" id="menu1" type="button" data-toggle="dropdown">
-        Select Position
-        <span class="caret"></span>
-    </button>
-    <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
-        @if (isEnglish)
-        {
-            foreach (var jp in jobPositions)
+    <div class="col-sm-3">
+        <label><b>Level</b></label><br />
+        <button class="dropdown-toggle" id="menu1" type="button" data-toggle="dropdown">
+            @Model.JobGroup.Code @Model.level
+            <span class="caret"></span>
+        </button>
+        <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
+            @foreach (var level in levelsd)
             {
-                <li role="presentation"><a role="menuitem" tabindex="-1" asp-page="Details" asp-route-positionid="@jp.JobTitleId">@jp.JobTitleEng</a></li>
-            }
-        }
-        else
+                var data = new Dictionary<string, string>
         {
-            foreach (var jp in jobPositions) { 
-            <li role="presentation"><a role="menuitem" tabindex="-1" asp-page="Details" asp-route-positionid="@jp.JobTitleId">@jp.JobTitleFre</a></li>
-            }
-        }
-    </ul>
-</div>
+           { "id",  id.ToString()},
+           { "level",  level.ToString()}
+        };
+        <li role="presentation">
+            <a role="menuitem" tabindex="-1"
+               asp-page="CurrentPosition" asp-all-route-data="data">Level @level</a>
+        </li>
 
-<div class="row">
-    <div class="col-lg-12 mrgn-bttm-md">
-        <nav role="navigation" class="mrgn-bttm-lg">
-            <h2 class="wb-inv">Document navigation</h2>
-            <ul class="pager">
-                <li class="previous"><a asp-page="AllPositions">@Localizer["Previous"]</a></li>
-                <li class="next"><a asp-page="SearchType">@Localizer["Next"]</a></li>
-            </ul>
-        </nav>
+    }
+        </ul>
+    </div>
+    <div class="col-sm-3">
+        <label><b>Position</b></label><br />
+        <button class="dropdown-toggle" id="menu1" type="button" width="100%" data-toggle="dropdown">
+            Select Position
+            <span class="caret"></span>
+        </button>
+        <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
+            @if (isEnglish)
+            {
+                foreach (var jp in jobPositions)
+                {
+    <li role="presentation"><a role="menuitem" tabindex="-1" asp-page="Details" asp-route-positionid="@jp.JobTitleId">@jp.JobTitleEng</a></li> }
+                }
+                else
+                {
+                    foreach (var jp in jobPositions)
+                    {
+    <li role="presentation"><a role="menuitem" tabindex="-1" asp-page="Details" asp-route-positionid="@jp.JobTitleId">@jp.JobTitleFre</a></li>}
+                }
+        </ul>
     </div>
 </div>
+    <div class="row">
+        <div class="col-sm-12 mrgn-bttm-md">
+            <nav role="navigation" class="mrgn-bttm-lg">
+                <h2 class="wb-inv">Document navigation</h2>
+                <ul class="pager">
+                    <li class="previous"><a asp-page="AllPositions">@Localizer["Previous"]</a></li>
+                    <li class="next"><a asp-page="SearchType">@Localizer["Next"]</a></li>
+                </ul>
+            </nav>
+        </div>
+    </div>
 
