--- a/Web/Pages/CCGMember/Compare/ObjectivePosition.cshtml
+++ b/Web/Pages/CCGMember/Compare/ObjectivePosition.cshtml
@@ -3,58 +3,94 @@
 @model Web.Pages.CCGMember.Compare.ObjectivePositionModel
 @inject IHttpContextAccessor contextAccessor
 @inject IViewLocalizer Localizer
-@{ var isEnglish = System.Threading.Thread.CurrentThread.CurrentCulture.TwoLetterISOLanguageName == "en";
-                //var page = contextAccessor.HttpContext.Request.RouteValues;
-                var jobPositions = Model.JobGroupPositions; }
+@{
+    var isEnglish = System.Threading.Thread.CurrentThread.CurrentCulture.TwoLetterISOLanguageName == "en";
+    //var page = contextAccessor.HttpContext.Request.RouteValues;
+    var id = Model.JobGroup.Id;
+    var current = Model.current;
+    var jobPositions = Model.JobGroupPositions;
+    var groupLevels = Model.JobGroupLevels;
+    var levels = new List<string>();
+
+    foreach (var jp in groupLevels)
+    {
+        levels.Add(jp.LevelValue);
+    }
+    var levelsd = levels.Distinct();
+}
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-<h2>@Localizer["Level"] @Model.level</h2>
-<h2>@Localizer["h2Text"]</h2>
 
-<!--figure><img src="~/img/CCGMember/Positions-full.jpg" alt="Photo of " class="img-responsive thumbnail mrgn-bttm-sm" </figure-->
-<br />
+<h2><b>@Localizer["h2Text"]</b></h2>
 
-
+<figure><img src="~/img/CCGMember/Positions-full.jpg" alt="Photo of " class="img-responsive thumbnail mrgn-bttm-sm" /> </figure>
+<h3><b>@Model.JobGroup.NameEng (@Model.JobGroup.Code)</b></h3>
 <div class="dropdown">
-    <button class="btn btn-primary dropdown-toggle" id="menu1" type="button" data-toggle="dropdown">
-        Select Position
-        <span class="caret"></span>
-    </button>
-    <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
-        @if (isEnglish)
-        {
-            foreach (var jp in jobPositions)
+    <div class="col-sm-3">
+        <label><b>Level</b></label><br />
+                                   <button class="dropdown-toggle" width="100%" id="menu1" type="button" data-toggle="dropdown">
+                                       @Model.JobGroup.Code @Model.level
+                                       <span class="caret"></span>
+                                   </button>
+        <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
+            @foreach (var level in levelsd)
             {
-                var data = new Dictionary<string, string>
-        {
-           { "current",  Model.current.ToString()},
-           { "obj",  jp.JobTitleId.ToString()}
-        };
-<li role="presentation"><a role="menuitem" tabindex="-1" asp-page="Delta" asp-all-route-data="data">@jp.JobTitleEng</a></li> }
-        }
-        else
-        {
-            foreach (var jp in jobPositions)
+              var data = new Dictionary<string, string>
+                 {
+                     { "current", current.ToString()},
+                     { "id",  id.ToString()},
+                     { "level",  level.ToString() }
+                  };
+        <li role="presentation">
+            <a role="menuitem" tabindex="-1"
+               asp-page="ObjectivePosition" asp-all-route-data="data">Level @level</a>
+        </li>
+    }
+        </ul>
+    </div>
+    <div class="col-sm-3">
+        <label><b>Position</b></label><br />
+        <button class="dropdown-toggle" width="100%" id="menu1" type="button" data-toggle="dropdown">
+            Select Position
+            <span class="caret"></span>
+        </button>
+        <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
+            @if (isEnglish)
             {
-                var data = new Dictionary<string, string>
-        {
-           { "current",  Model.current.ToString()},
-           { "obj",  jp.JobTitleId.ToString()}
-        };
-<li role="presentation"><a role="menuitem" tabindex="-1" asp-page="Delta" asp-all-route-data="data">@jp.JobTitleFre</a></li>}
-            }
-    </ul>
-</div>
-
-<div class="row">
-    <div class="col-lg-12 mrgn-bttm-md">
-        <nav role="navigation" class="mrgn-bttm-lg">
-            <h2 class="wb-inv">Document navigation</h2>
-            <ul class="pager">
-                <li class="previous"><a asp-page="AllPositions">@Localizer["Previous"]</a></li>
-                <li class="next"><a asp-page="SearchType">@Localizer["Next"]</a></li>
-            </ul>
-        </nav>
+                foreach (var jp in jobPositions)
+                {
+                    var data = new Dictionary<string, string>
+                     {
+                        { "current",  Model.current.ToString()},
+                        { "obj",  jp.JobTitleId.ToString()}
+                     };
+    <li role="presentation"><a role="menuitem" tabindex="-1" asp-page="Delta" asp-all-route-data="data">@jp.JobTitleEng</a></li> 
+    }
+                }
+                else
+                {
+                    foreach (var jp in jobPositions)
+                    {
+                    var data = new Dictionary<string, string>
+                      {
+                          { "current",  Model.current.ToString()},
+                          { "obj",  jp.JobTitleId.ToString()}
+                      };
+     <li role="presentation"><a role="menuitem" tabindex="-1" asp-page="Delta" asp-all-route-data="data">@jp.JobTitleFre</a></li>
+                      }
+                     }
+        </ul>
     </div>
 </div>
+    <div class="row">
+        <div class="col-sm-12 mrgn-bttm-md">
+            <nav role="navigation" class="mrgn-bttm-lg">
+                <h2 class="wb-inv">Document navigation</h2>
+                <ul class="pager">
+                    <li class="previous"><a asp-page="AllPositions">@Localizer["Previous"]</a></li>
+                    <li class="next"><a asp-page="SearchType">@Localizer["Next"]</a></li>
+                </ul>
+            </nav>
+        </div>
+    </div>
