--- a/Web/Pages/CCGMember/Details.cshtml
+++ b/Web/Pages/CCGMember/Details.cshtml
@@ -15,127 +15,117 @@
     bool type2 = true;
     bool type3 = true;
     bool type4 = true;
-
 }
-<section role="contentinfo">
-    <div class="row mrgn-tp-md">
-        <button class="btn btn-primary mrgn-lft-md" type="button">@Localizer["Print PDF"]</button>
-        <button class="btn btn-primary pull-right mrgn-rght-md" type="button">@Localizer["Save PDF"]</button>
-    </div>
-    <div class="row  mrgn-bttm-lg">
-        <h2 class="text-center">@Localizer["Current Position Details"]</h2>
-    </div>
-    <table class="table table-bordered table-responsive" width="100%" border="0" cellspacing="0" cellpadding="0">
-        <tbody>
+
+    <section role="contentinfo">
+        <div class="row mrgn-tp-md">
+            <button class="btn btn-primary mrgn-lft-md" type="button">@Localizer["Print PDF"]</button>
+            <button class="btn btn-primary pull-right mrgn-rght-md" type="button">@Localizer["Save PDF"]</button>
+        </div>
+        <h2><b>@Localizer["Current Position Details"]</b></h2>
+        <table class="table table-hover table-bordered" width="100%" border="0" cellspacing="0" cellpadding="0">
+            <thead>
+                <tr>
+                    <th class="bg-primary" colspan="2">@Localizer["POSITION DETAILS"]: @cur.JobGroupCode-@cur.JobGroupLevelValue @cur.JobTitleEng</th>
+</tr>
+            </thead>
             <tr>
-                <td class="bg-success" width="100%"><b>@Localizer["Current Position"]:</b> @cur.JobGroupCodeEng @cur.JobGroupLevelValue - @cur.JobTitleEng</td>
+                <th style="background-color:#f2f2f2" colspan="2">@Localizer["CERTIFICATIONS"]</th>
+</tr>
 
-            </tr>
-        </tbody>
-    </table>
-    <h3>@Localizer["POSITION CERTIFICATES"]</h3>
-    <table class="table table-responsive table-bordered">
-
-
-        <tr>
-            <th style="background-color:#f2f2f2" width="50%">Certificate</th>
-            <th style="background-color:#f2f2f2" width="50%"></th>
-        </tr>
-        @foreach (var c in curcert)
-        {
-            <tr>
-                <td style="background-color:#f2f2f2" width="50%">@c.NameEng</td>
-                <td style="background-color:#f2f2f2" width="50%">&nbsp;</td>
-            </tr>
-
-        }
-    </table>
-    <h3>@Localizer["POSITION COMPETENCIES"]</h3>
-    <table class="table table-responsive table-bordered">
-
-
-        <tr>
-            <th style="background-color:#f2f2f2" width="50%">Competency</th>
-            <th style="background-color:#f2f2f2" width="50%">Rating</th>
-        </tr>
-        @foreach (var c in currat)
-        {
-            if (c.TypeId == 1)
+            @if (curcert.Length > 0)
             {
-                if (type1 == true)
+                @foreach (var c in curcert)
                 {
-                    type1 = false;
                     <tr>
-                        <th style="background-color:#f2f2f2" width="50%">@c.TypeNameEng</th>
-                        <th style="background-color:#f2f2f2" width="50%">&nbsp;</th>
+                        <td colspan="2">@c.NameEng</td>
                     </tr>
                 }
+            }
+            else
+            {
                 <tr>
-                    <td>@c.CompetencyNameEng</td>
-                    <td>@c.RatingValue</td>
+                    <td colspan="2">@Localizer["No Certifications"]</td>
                 </tr>
             }
-        }
-        @foreach (var c in currat)
-        {
-            if (c.TypeId == 2)
+
+            @foreach (var c in currat)
             {
-                if (type2 == true)
+                if (c.TypeId == 1)
                 {
-                    type2 = false;
+                    if (type1 == true)
+                    {
+                        type1 = false;
+                        <tr>
+                            <th style="background-color:#f2f2f2" width="80%">@c.TypeNameEng.ToUpper()</th>
+                            <th style="background-color:#f2f2f2" class="text-center" width="20%">Level</th>
+                        </tr>
+                    }
                     <tr>
-                        <th style="background-color:#f2f2f2" width="50%">@c.TypeNameEng</th>
-                        <th style="background-color:#f2f2f2" width="50%">&nbsp;</th>
+                        <td>@c.CompetencyNameEng</td>
+                        <td class="text-center"><a onmouseover="">@c.RatingValue</a></td>
                     </tr>
                 }
-
-                <tr>
-                    <td>@c.CompetencyNameEng</td>
-                    <td>@c.RatingValue</td>
-                </tr>
             }
-        }
-
-        @foreach (var c in currat)
-        {
-            if (c.TypeId == 3)
+            @foreach (var c in currat)
             {
-                if (type3 == true)
+                if (c.TypeId == 2)
                 {
-                    type3 = false;
+                    if (type2 == true)
+                    {
+                        type2 = false;
+                        <tr>
+                            <th style="background-color:#f2f2f2" width="80%">@c.TypeNameEng.ToUpper()</th>
+                            <th style="background-color:#f2f2f2" class="text-center" width="20%">Level</th>
+                        </tr>
+                    }
+
                     <tr>
-                        <th style="background-color:#f2f2f2" width="50%">@c.TypeNameEng</th>
-                        <th style="background-color:#f2f2f2" width="50%">&nbsp;</th>
+                        <td>@c.CompetencyNameEng</td>
+                        <td class="text-center"><a onmouseover="">@c.RatingValue</a></td>
                     </tr>
                 }
-                <tr>
-                    <td>@c.CompetencyNameEng</td>
-                    <td>@c.RatingValue</td>
-                </tr>
             }
-        }
-        @foreach (var c in currat)
-        {
-            if (c.TypeId == 4)
+
+            @foreach (var c in currat)
             {
-                if (type4 == true)
+                if (c.TypeId == 3)
                 {
-                    type4 = false;
+                    if (type3 == true)
+                    {
+                        type3 = false;
+                        <tr>
+                            <th style="background-color:#f2f2f2" width="80%">@c.TypeNameEng.ToUpper()</th>
+                            <th style="background-color:#f2f2f2" class="text-center" width="20%">Level</th>
+                        </tr>
+                    }
                     <tr>
-                        <th style="background-color:#f2f2f2" width="50%">@c.TypeNameEng</th>
-                        <th style="background-color:#f2f2f2" width="50%">&nbsp;</th>
+                        <td>@c.CompetencyNameEng</td>
+                        <td class="text-center"><a onmouseover="">@c.RatingValue</a></td>
                     </tr>
                 }
-                <tr>
-                    <td>@c.CompetencyNameEng</td>
-                    <td>@c.RatingValue</td>
-                </tr>
             }
-        }
-    </table>
+            @foreach (var c in currat)
+            {
+                if (c.TypeId == 4)
+                {
+                    if (type4 == true)
+                    {
+                        type4 = false;
+                        <tr>
+                            <th style="background-color:#f2f2f2" width="80%">@c.TypeNameEng.ToUpper()</th>
+                            <th style="background-color:#f2f2f2" class="text-center" width="20%">Level</th>
+                        </tr>
+                    }
+                    <tr>
+                        <td>@c.CompetencyNameEng</td>
+                        <td class="text-center"><a onmouseover="">@c.RatingValue</a></td>
+                    </tr>
+                }
+            }
+        </table>
 
-</section>
-
+    </section>
 
 <div class="row">
     <div class="col-lg-12 mrgn-bttm-md">
@@ -144,7 +134,7 @@
             <h2 class="wb-inv">Document navigation</h2>
 
             <ul class="pager">
-                <li class="previous"><a  asp-page="CurrentPosition">Previous</a></li>
+                <li class="previous"><a asp-page="CurrentPosition">Previous</a></li>
                 <li class="next"><a asp-page="SearchType" asp-route-positionid="@cur.JobTitleId">Next</a></li>
             </ul>
 
