--- a/Web/Pages/CCGMember/SearchType.cshtml
+++ b/Web/Pages/CCGMember/SearchType.cshtml
@@ -3,7 +3,7 @@
 @inject IViewLocalizer Localizer
 
 
-<h3>@Localizer["Question1"]</h3>
+<h2><b>@Localizer["Question1"]</b></h2>
 <a asp-page="">
     <div class="col-sm-3 mrgn-bttm-md">
         <figure>
@@ -28,4 +28,5 @@
         </figure>
     </div>
 </a>
+
 
