--- a/Web/Pages/CCGMember/AllPositions.cshtml
+++ b/Web/Pages/CCGMember/AllPositions.cshtml
@@ -28,7 +28,7 @@
                         <a asp-page="CurrentLevel" asp-route-id="@jobgroup.Id">
                             <div class="col-sm-3 mrgn-bttm-md">
                                 <figure>
-                                    <img src="@Url.Content(imagefolder + jobgroup.NameEng +".jpg")" alt="" class="img-responsive thumbnail mrgn-bttm-sm" />
+                                    <img src="@Url.Content(imagefolder + jobgroup.Code +".jpg")" alt="" class="img-responsive thumbnail mrgn-bttm-sm" />
                                     <figcaption class="text-center"><h6>@jobgroup.NameEng (@jobgroup.Code)</h6></figcaption>
                                 </figure>
                             </div>
@@ -45,7 +45,7 @@
                             <a asp-page="CurrentLevel" asp-route-id="@jobgroup.Id">
                                 <div class="col-sm-3 mrgn-bttm-md">
                                     <figure>
-                                        <img src="@Url.Content(imagefolder + jobgroup.NameEng +".jpg")" alt="" class="img-responsive thumbnail mrgn-bttm-sm" />
+                                        <img src="@Url.Content(imagefolder + jobgroup.Code +".jpg")" alt="" class="img-responsive thumbnail mrgn-bttm-sm" />
                                         <figcaption class="text-center"><h6>@jobgroup.NameEng (@jobgroup.Code)</h6></figcaption>
                                     </figure>
                                 </div>
@@ -68,7 +68,7 @@
 
                             <div class="col-sm-3 mrgn-bttm-md">
                                 <figure>
-                                    <img src="@Url.Content(imagefolder + jobgroup.NameEng +".jpg")" alt="" class="img-responsive thumbnail mrgn-bttm-sm" />
+                                    <img src="@Url.Content(imagefolder + jobgroup.Code +".jpg")" alt="" class="img-responsive thumbnail mrgn-bttm-sm" />
                                     <figcaption class="text-center"><h6>@jobgroup.NameFre (@jobgroup.Code)</h6></figcaption>
                                 </figure>
                             </div>
@@ -85,7 +85,7 @@
                             <a asp-page="CurrentLevel" asp-route-id="@jobgroup.Id">
                                 <div class="col-sm-3 mrgn-bttm-md">
                                     <figure>
-                                        <img src="@Url.Content(imagefolder + jobgroup.NameEng +".jpg")" alt="" class="img-responsive thumbnail mrgn-bttm-sm" />
+                                        <img src="@Url.Content(imagefolder + jobgroup.Code +".jpg")" alt="" class="img-responsive thumbnail mrgn-bttm-sm" />
                                         <figcaption class="text-center"><h6>@jobgroup.NameFre (@jobgroup.Code)</h6></figcaption>
                                     </figure>
                                 </div>
