--- a/Web/Pages/CCGMember/Compare/AllObjective.cshtml
+++ b/Web/Pages/CCGMember/Compare/AllObjective.cshtml
@@ -34,7 +34,7 @@
 
                             <div class="col-sm-3 mrgn-bttm-md">
                                 <figure>
-                                    <img src="@Url.Content(imagefolder + jobgroup.NameEng +".jpg")" alt="" class="img-responsive thumbnail mrgn-bttm-sm" />
+                                    <img src="@Url.Content(imagefolder + jobgroup.Code +".jpg")" alt="" class="img-responsive thumbnail mrgn-bttm-sm" />
                                     <figcaption class="text-center"><h6>@jobgroup.NameEng (@jobgroup.Code)</h6></figcaption>
                                 </figure>
                             </div>
@@ -56,7 +56,7 @@
                             <a asp-page="ObjectiveLevel" asp-all-route-data="data">
                                 <div class="col-sm-3 mrgn-bttm-md">
                                     <figure>
-                                        <img src="@Url.Content(imagefolder + jobgroup.NameEng +".jpg")" alt="" class="img-responsive thumbnail mrgn-bttm-sm" />
+                                        <img src="@Url.Content(imagefolder + jobgroup.Code +".jpg")" alt="" class="img-responsive thumbnail mrgn-bttm-sm" />
                                         <figcaption class="text-center"><h6>@jobgroup.NameEng (@jobgroup.Code)</h6></figcaption>
                                     </figure>
                                 </div>
@@ -84,7 +84,7 @@
 
                             <div class="col-sm-3 mrgn-bttm-md">
                                 <figure>
-                                    <img src="@Url.Content(imagefolder + jobgroup.NameEng +".jpg")" alt="" class="img-responsive thumbnail mrgn-bttm-sm" />
+                                    <img src="@Url.Content(imagefolder + jobgroup.Code +".jpg")" alt="" class="img-responsive thumbnail mrgn-bttm-sm" />
                                     <figcaption class="text-center"><h6>@jobgroup.NameFre (@jobgroup.Code)</h6></figcaption>
                                 </figure>
                             </div>
@@ -106,7 +106,7 @@
                             <a asp-page="ObjectiveLevel" asp-all-route-data="data">
                                 <div class="col-sm-3 mrgn-bttm-md">
                                     <figure>
-                                        <img src="@Url.Content(imagefolder + jobgroup.NameEng +".jpg")" alt="" class="img-responsive thumbnail mrgn-bttm-sm" />
+                                        <img src="@Url.Content(imagefolder + jobgroup.Code +".jpg")" alt="" class="img-responsive thumbnail mrgn-bttm-sm" />
                                         <figcaption class="text-center"><h6>@jobgroup.NameFre (@jobgroup.Code)</h6></figcaption>
                                     </figure>
                                 </div>
