--- a/Web/Pages/CCGMember/Compare/ObjectiveLevel.cshtml
+++ b/Web/Pages/CCGMember/Compare/ObjectiveLevel.cshtml
@@ -38,7 +38,7 @@
                  {
                        {"current",  current.ToString() },
                        { "id",  id.ToString()},
-                       { "level",  level.ToString()}
+                       { "level",  level}
                   };
         <li role="presentation">
             <a role="menuitem" tabindex="-1"
