--- a/Web/Pages/CCGMember/Compare/ObjectivePosition.cshtml
+++ b/Web/Pages/CCGMember/Compare/ObjectivePosition.cshtml
@@ -30,7 +30,7 @@
     <div class="col-sm-3">
         <label><b>Level</b></label><br />
                                    <button class="dropdown-toggle" width="100%" id="menu1" type="button" data-toggle="dropdown">
-                                       @Model.JobGroup.Code @Model.level
+                                       @Model.JobGroup.Code @Model.level &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                                        <span class="caret"></span>
                                    </button>
         <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
