--- a/Web/Pages/CCGMember/CurrentLevel.cshtml
+++ b/Web/Pages/CCGMember/CurrentLevel.cshtml
@@ -36,7 +36,7 @@
                 var data = new Dictionary<string, string>
         {
            { "id",  id.ToString()},
-           { "level",  level.ToString()}
+           { "level",  level}
         };
         <li role="presentation">
             <a role="menuitem" tabindex="-1"
