--- a/Web/Pages/CCGMember/Compare/Delta.cshtml
+++ b/Web/Pages/CCGMember/Compare/Delta.cshtml
@@ -19,7 +19,7 @@
             <button class="btn btn-primary mrgn-lft-md" type="button">@Localizer["Print PDF"]</button>
             <button class="btn btn-primary pull-right mrgn-rght-md" type="button">@Localizer["Save PDF"]</button>
         </div>
-        <div class="row  mrgn-bttm-lg">
+        <div class="row text-center mrgn-bttm-lg">
             <h2><b>@Localizer["h2Results"]</b></h2>
         </div>
         <table class="table table-bordered table-responsive" width="100%" border="0" cellspacing="0" cellpadding="0">
