--- a/Web/Pages/CCGMember/Details.cshtml
+++ b/Web/Pages/CCGMember/Details.cshtml
@@ -17,115 +17,114 @@
     bool type4 = true;
 }
 
-    <section role="contentinfo">
-        <div class="row mrgn-tp-md">
-            <button class="btn btn-primary mrgn-lft-md" type="button">@Localizer["Print PDF"]</button>
-            <button class="btn btn-primary pull-right mrgn-rght-md" type="button">@Localizer["Save PDF"]</button>
-        </div>
-        <h2><b>@Localizer["Current Position Details"]</b></h2>
-        <table class="table table-hover table-bordered" width="100%" border="0" cellspacing="0" cellpadding="0">
-            <thead>
-                <tr>
-                    <th class="bg-primary" colspan="2">@Localizer["POSITION DETAILS"]: @cur.JobGroupCode-@cur.JobGroupLevelValue @cur.JobTitleEng</th>
-</tr>
-            </thead>
+<section role="contentinfo">
+    <div class="row mrgn-tp-md">
+        <button class="btn btn-primary mrgn-lft-md" type="button">@Localizer["Print PDF"]</button>
+        <button class="btn btn-primary pull-right mrgn-rght-md" type="button">@Localizer["Save PDF"]</button>
+    </div>
+    <h2><b>@Localizer["Current Position Details"]</b></h2>
+    <table class="table table-hover table-bordered" width="100%" border="0" cellspacing="0" cellpadding="0">
+        <thead>
             <tr>
-                <th style="background-color:#f2f2f2" colspan="2">@Localizer["CERTIFICATIONS"]</th>
-</tr>
+                <th class="bg-primary" colspan="2">@Localizer["POSITION DETAILS"]: @cur.JobGroupCode-@cur.JobGroupLevelValue @cur.JobTitleEng</th>
+            </tr>
+        </thead>
+        <tr>
+            <th style="background-color:#f2f2f2" colspan="2">@Localizer["CERTIFICATIONS"]</th>
+        </tr>
 
-            @if (curcert.Length > 0)
-            {
-                @foreach (var c in curcert)
-                {
-                    <tr>
-                        <td colspan="2">@c.NameEng</td>
-                    </tr>
-                }
-            }
-            else
+        @if (curcert.Length > 0)
+        {
+            @foreach (var c in curcert)
             {
                 <tr>
-                    <td colspan="2">@Localizer["No Certifications"]</td>
+                    <td colspan="2">@c.NameEng</td>
                 </tr>
             }
+        }
+        else
+        {
+            <tr>
+                <td colspan="2">@Localizer["No Certifications"]</td>
+            </tr>
+        }
 
-            @foreach (var c in currat)
+        @foreach (var c in currat)
+        {
+            if (c.TypeId == 1)
             {
-                if (c.TypeId == 1)
+                if (type1 == true)
                 {
-                    if (type1 == true)
-                    {
-                        type1 = false;
-                        <tr>
-                            <th style="background-color:#f2f2f2" width="80%">@c.TypeNameEng.ToUpper()</th>
-                            <th style="background-color:#f2f2f2" class="text-center" width="20%">Level</th>
-                        </tr>
-                    }
+                    type1 = false;
                     <tr>
-                        <td>@c.CompetencyNameEng</td>
-                        <td class="text-center"><a onmouseover="">@c.RatingValue</a></td>
+                        <th style="background-color:#f2f2f2" width="80%">@c.TypeNameEng.ToUpper()</th>
+                        <th style="background-color:#f2f2f2" class="text-center" width="20%">Level</th>
                     </tr>
                 }
+                <tr>
+                    <td>@c.CompetencyNameEng</td>
+                    <td class="text-center"><a data-toggle="tooltip" title="@c.RatingDescEng">@c.RatingValue</a></td>
+                </tr>
             }
-            @foreach (var c in currat)
+        }
+        @foreach (var c in currat)
+        {
+            if (c.TypeId == 2)
             {
-                if (c.TypeId == 2)
+                if (type2 == true)
                 {
-                    if (type2 == true)
-                    {
-                        type2 = false;
-                        <tr>
-                            <th style="background-color:#f2f2f2" width="80%">@c.TypeNameEng.ToUpper()</th>
-                            <th style="background-color:#f2f2f2" class="text-center" width="20%">Level</th>
-                        </tr>
-                    }
-
+                    type2 = false;
                     <tr>
-                        <td>@c.CompetencyNameEng</td>
-                        <td class="text-center"><a onmouseover="">@c.RatingValue</a></td>
+                        <th style="background-color:#f2f2f2" width="80%">@c.TypeNameEng.ToUpper()</th>
+                        <th style="background-color:#f2f2f2" class="text-center" width="20%">Level</th>
                     </tr>
                 }
-            }
 
-            @foreach (var c in currat)
+                <tr>
+                    <td>@c.CompetencyNameEng</td>
+                    <td class="text-center"><a data-toggle="tooltip" title="@c.RatingDescEng">@c.RatingValue</a></td>
+                </tr>
+            }
+        }
+
+        @foreach (var c in currat)
+        {
+            if (c.TypeId == 3)
             {
-                if (c.TypeId == 3)
+                if (type3 == true)
                 {
-                    if (type3 == true)
-                    {
-                        type3 = false;
-                        <tr>
-                            <th style="background-color:#f2f2f2" width="80%">@c.TypeNameEng.ToUpper()</th>
-                            <th style="background-color:#f2f2f2" class="text-center" width="20%">Level</th>
-                        </tr>
-                    }
+                    type3 = false;
                     <tr>
-                        <td>@c.CompetencyNameEng</td>
-                        <td class="text-center"><a onmouseover="">@c.RatingValue</a></td>
+                        <th style="background-color:#f2f2f2" width="80%">@c.TypeNameEng.ToUpper()</th>
+                        <th style="background-color:#f2f2f2" class="text-center" width="20%">Level</th>
                     </tr>
                 }
+                <tr>
+                    <td>@c.CompetencyNameEng</td>
+                    <td class="text-center"><a data-toggle="tooltip" title="@c.RatingDescEng">@c.RatingValue</a></td>
+                </tr>
             }
-            @foreach (var c in currat)
+        }
+        @foreach (var c in currat)
+        {
+            if (c.TypeId == 4)
             {
-                if (c.TypeId == 4)
+                if (type4 == true)
                 {
-                    if (type4 == true)
-                    {
-                        type4 = false;
-                        <tr>
-                            <th style="background-color:#f2f2f2" width="80%">@c.TypeNameEng.ToUpper()</th>
-                            <th style="background-color:#f2f2f2" class="text-center" width="20%">Level</th>
-                        </tr>
-                    }
+                    type4 = false;
                     <tr>
-                        <td>@c.CompetencyNameEng</td>
-                        <td class="text-center"><a onmouseover="">@c.RatingValue</a></td>
+                        <th style="background-color:#f2f2f2" width="80%">@c.TypeNameEng.ToUpper()</th>
+                        <th style="background-color:#f2f2f2" class="text-center" width="20%">Level</th>
                     </tr>
                 }
+                <tr>
+                    <td>@c.CompetencyNameEng</td>
+                    <td class="text-center"><a data-toggle="tooltip" title="@c.RatingDescEng">@c.RatingValue</a></td>
+                </tr>
             }
-        </table>
-
-    </section>
+        }
+    </table>
+</section>
 
 <div class="row">
     <div class="col-lg-12 mrgn-bttm-md">
