--- a/Web/Pages/CCGMember/Compare/Delta.cshtml
+++ b/Web/Pages/CCGMember/Compare/Delta.cshtml
@@ -33,8 +33,8 @@
         <h3>@Localizer["MATCHING COMPETENCIES"]</h3>
         <table class="table table-responsive table-bordered">
             <tr>
-                <th style="background-color:#f2f2f2" width="50%">CERTIFICATIONS</th>
-                <th style="background-color:#f2f2f2" width="50%">TECHNICAL ELEMENTS</th>
+                <th style="background-color:#f2f2f2" width="50%">@Localizer["CERTIFICATIONS"]</th>
+                <th style="background-color:#f2f2f2" width="50%">@Localizer["TECHNICAL ELEMENTS"]</th>
             </tr>
             @if (match2.Count > matchcert.Count)
             {
@@ -96,8 +96,8 @@
                 </tr>
             }
             <tr>
-                <th style="background-color:#f2f2f2" width="50%">KNOWLEDGE ELEMENTS</th>
-                <th style="background-color:#f2f2f2" width="50%">BEHAVIOURAL ELEMENTS</th>
+                <th style="background-color:#f2f2f2" width="50%">@Localizer["KNOWLEDGE ELEMENTS"]</th>
+                <th style="background-color:#f2f2f2" width="50%">@Localizer["BEHAVIOURAL ELEMENTS"]</th>
             </tr>
             @if (match1.Count > match3.Count)
             {
